<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_shop"
            android:title="@string/menu_shop_by_cat" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_menu_deals"
            android:title="@string/menu_today_deals" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_orders"
            android:icon="@drawable/ic_menu_your_orders"
            android:title="@string/menu_your_orders" />
        <item
            android:id="@+id/nav_buy_again"
            android:icon="@drawable/ic_menu_buy_again"
            android:title="@string/menu_buy_again" />
        <item
            android:id="@+id/nav_your_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_your_account" />

    </group>

    <item android:title="@string/menu_Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
